# mathodology

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.gateway  Dockerfile.worker  Procfile.dev  README.md  README_zh.md  docker-compose.prod.yml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/agent-worker/: README.md  pyproject.toml
apps/agent-worker/src/agent_worker/: __init__.py  __main__.py  _chart_helpers.py  audit.py  cancellation.py  chart_catalog.py  cli.py  compactor.py  config.py  cost_tracker.py  events.py  finetune_main.py  gateway_client.py  logging.py  main.py  pipeline.py
apps/agent-worker/src/agent_worker/agents/: __init__.py  _common.py  analyzer.py  base.py  coder.py  critic.py  evidence.py  hooks.py  modeler.py  paper_editor.py  searcher.py  writer.py
apps/agent-worker/src/agent_worker/editor_tools/: __init__.py  tools.py
apps/agent-worker/src/agent_worker/few_shot/: __init__.py  loader.py
apps/agent-worker/src/agent_worker/hmml/: __init__.py  service.py
apps/agent-worker/src/agent_worker/hmml/seed/classification_regression_ml/: gradient_boosting.json  random_forest.json  svm.json
apps/agent-worker/src/agent_worker/hmml/seed/clustering_dimred/: hierarchical_clustering.json  kmeans.json  pca.json
apps/agent-worker/src/agent_worker/hmml/seed/evaluation_decision/: ahp.json  topsis.json
apps/agent-worker/src/agent_worker/hmml/seed/graph_network/: dijkstra.json  minimum_spanning_tree.json  pagerank.json
apps/agent-worker/src/agent_worker/hmml/seed/ode_pde/: euler_method.json  rk4.json
apps/agent-worker/src/agent_worker/hmml/seed/optimization/: convex_quadratic_programming.json  genetic_algorithm.json  lasso_regression.json  linear_programming_simplex.json  nonlinear_least_squares.json  ols_linear_regression.json  ridge_regression.json  simulated_annealing.json
apps/agent-worker/src/agent_worker/hmml/seed/simulation_queueing/: discrete_event_simulation.json  mmc_queue.json  monte_carlo.json
apps/agent-worker/src/agent_worker/hmml/seed/statistics_inference/: anova.json  chi_square_test.json  logistic_regression.json  t_test.json
apps/agent-worker/src/agent_worker/hmml/seed/time_series/: arima.json  exponential_smoothing.json  stl_decomposition.json
apps/agent-worker/src/agent_worker/kernel/: __init__.py  manager.py
apps/agent-worker/src/agent_worker/matlab/: __init__.py  backends.py  session.py
apps/agent-worker/src/agent_worker/prompts/: __init__.py
apps/agent-worker/src/agent_worker/prompts/analyzer/: v1.toml
apps/agent-worker/src/agent_worker/prompts/coder/: v1.toml
apps/agent-worker/src/agent_worker/prompts/critic/: v1.toml
apps/agent-worker/src/agent_worker/prompts/modeler/: v1.toml
apps/agent-worker/src/agent_worker/prompts/paper_editor/: v1.toml
apps/agent-worker/src/agent_worker/prompts/searcher/: v1.toml
apps/agent-worker/src/agent_worker/prompts/writer/: v1.toml
apps/agent-worker/src/agent_worker/skills/: __init__.py  loader.py  tool.py
apps/agent-worker/src/agent_worker/tools/: __init__.py  arxiv.py  crossref.py  openalex.py  pdf.py  tavily.py  web_search_mcp.py
apps/agent-worker/tests/: test_arxiv_tool.py  test_audit.py  test_auto_export_pdf.py  test_base_agent_parse.py  test_base_agent_parse_lenient.py  test_base_agent_revision.py  test_cancellation.py  test_chart_catalog.py  test_coder_agent.py  test_coder_critic_revision.py  test_compactor.py  test_contracts_searchfindings.py  test_cost_tracker.py  test_critic_agent.py  test_critic_contracts.py  test_critic_model_override.py  test_critic_policy_actual_cost.py  test_critic_policy_overrides.py  test_crossref_tool.py  test_evidence_mining.py  test_few_shot_loader.py  test_figure_pipeline.py  test_finetune_main_e2e.py  test_gateway_client_cache.py  test_hmml_fusion.py  test_hmml_service.py  test_kernel_session.py  test_matlab_session.py  test_modeler_agent.py  test_modeler_hmml.py  test_openalex_tool.py  test_paper_editor_agent.py  test_paper_editor_surgical_edit.py  test_paper_editor_tools.py  test_pdf_tool.py  test_pipeline_critic_gate.py  test_pipeline_critic_review_flow.py  test_post_stage_hooks.py  test_prompt_loader.py  test_reasoning_effort.py  (+9 more)
apps/web/: .eslintrc.cjs  README.md  components.json  env.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
config/: Caddyfile.prod  providers.toml
config/launchd/: com.mathodology.gateway.plist  com.mathodology.worker.plist  install.sh
config/systemd/: install.sh  mathodology-gateway.service  mathodology-worker.service  mathodology.target
config/windows/: install-service.ps1  uninstall-service.ps1
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 0001_runs.up.sql  0002_events_audit.up.sql  0003_cost_ledger.up.sql
crates/gateway/src/: app.rs  audit.rs  auth.rs  config.rs  dispatch.rs  error.rs  lib.rs  main.rs  state.rs
crates/gateway/src/llm/: cache.rs  canonical.rs  config.rs  cost.rs  mod.rs  router.rs  stream.rs
crates/gateway/src/llm/providers/: anthropic.rs  mod.rs  openai_compat.rs
crates/gateway/src/routes/: export.rs  figures.rs  health.rs  llm.rs  mod.rs  runs.rs  search.rs  stats.rs  ws_run.rs
crates/gateway/templates/: cumcm.tex.tera  huashu.tex.tera  mcm.tex.tera
crates/gateway/tests/: anthropic_stream.rs  export_paper.rs  figures_serve.rs  llm_stream.rs  reasoning_effort_passthrough.rs  router_fallback.rs  search_capabilities.rs
data/mcm/: GAP_ANALYSIS.md  README.md
docs/: matlab.md
docs/install/: linux.md  macos.md  server.md  windows.md
docs/promo/: index.html
installer/debian/: postinst  postrm  prerm
installer/macos/: build-pkg.sh  distribution.xml  readme.txt  welcome.txt
scripts/: bootstrap.sh  gen_contracts.sh  install.ps1  install.sh  preflight.ps1  preflight.sh  release-run.ps1  release-run.sh  smoke_e2e.sh
tests/: test_contracts_drift_workflow.py  test_dockerfile_gateway_target_platform.py  test_dockerfile_worker_open_websearch.py  test_windows_msi_wix_extensions.py
(+93 files in other folders)
