[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "streams", "aio"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dotenvy = "0.15"
config = { version = "0.14", features = ["toml"] }
toml = "0.8"
dashmap = "6"
sha2 = "0.10"
bytes = "1"
eventsource-stream = "0.2"
hex = "0.4"
wiremock = "=0.6.2"
tempfile = "=3.14"

[profile.dev]
opt-level = 0
debug = 1
# macOS: write debug info to separate .dSYM-style files instead of embedding
# into the final binary. Cuts link time ~30-50% on incremental rebuilds.
# Harmless on Linux (default behaviour is similar).
split-debuginfo = "unpacked"

# Compile *dependencies* with light optimization (O1) but keep our own code at
# O0. This pays a one-time penalty on a clean build, then every incremental
# rebuild is faster (smaller debug info to relink, deps stay cached) and the
# resulting binaries run noticeably quicker for end-to-end tests / smoke runs.
# Workspace gateway code is still rebuilt at O0 + incremental — instant.
[profile.dev.package."*"]
opt-level = 1
debug = false

# Some tests/benches that hit serde / regex / sha2 / sqlx_macros benefit from
# even more aggressive optimization. These are compiled once and cached.
[profile.dev.package.sqlx-macros]
opt-level = 3
[profile.dev.package.serde_derive]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
