[project]
name = "agent-worker"
version = "0.1.0"
description = "Mathodology agent worker — 4-agent pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
  "mm-contracts",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "redis>=5.0",
  "orjson>=3.10",
  "structlog>=24.4",
  "httpx>=0.27",
]

[project.scripts]
agent-worker = "agent_worker.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_worker"]
