[project]
name = "agent-worker"
version = "0.1.0"
description = "Mathodology agent worker — 4-agent pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
  "mm-contracts",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "redis>=5.0",
  "orjson>=3.10",
  "structlog>=24.4",
  "httpx>=0.27",
  "jupyter-client>=8.6",
  "ipykernel>=6.29",
  "nbformat>=5.10",
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.9",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
agent-worker = "agent_worker.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
